# zero2prod

./: Cargo.toml
migrations/: 20241113081910_create_subscribers_table.sql
script/: init_db.sh  migrate.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  mod.rs  subscriptions.rs
tests/: health_check.rs
