[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/lib.rs"
# 注意双括号:它是TOML语法的一部分，用于表示数组, 一个项目只能有一个库，但可以有多个二进制文件
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web="4"
tokio={ version = "1", features = ["macros","rt-multi-thread"] }
serde={version = "1",features = ["derive"]}
config="0.14"
uuid= { version = "1", features = ["v4"] }
chrono="0.4"
log="0.4"
tracing = { version = "0.1",features = ["log"] }
tracing-subscriber = {version = "0.3",features = ["registry","env-filter"]}
tracing-actix-web="0.7"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
env_logger = "0.11"
secrecy={version = "0.10",features = ["serde"]}

[dev-dependencies]
reqwest="0"
once_cell = "1"

[dependencies.sqlx]
version = "0.8"
default-features = false
features = ["runtime-tokio-rustls","macros", "postgres", "uuid", "chrono", "migrate"]